# ih-generate-models

./: CMakeLists.txt  a-score.cpp  a-score.h  common.h  init.cpp  init.h  main.cpp  mock-data.cpp  model.cpp  mutability.cpp  mutability.h  mutation-ratios.cpp  mutation-ratios.h  stdafx.h  test.cpp  utils.hpp  viterbi.cpp  viterbi.h
lib/fastareader/: abstractcharsequence.cpp  abstractcharsequence.h  fastareader.cpp  fastareader.h  source.txt  throw.h
testdata/: IGHVRepertoire.fasta  Mutation_spectrum.txt  blastOutput.xml  hotspots.txt
